PROJECT( tmxcore CXX )

FILE (GLOB_RECURSE SOURCES "src/*.c*")

ADD_EXECUTABLE (${PROJECT_NAME} ${SOURCES} )
IF (TMX_BIN_DIR)
    SET_TARGET_PROPERTIES (${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${TMX_BIN_DIR}")
ENDIF ()

TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC
                            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
                            ${MYSQL_INCLUDE_DIRS} ${MYSQLCPPCONN_INCLUDE_DIRS} )
TARGET_LINK_LIBRARIES ( ${PROJECT_NAME} PUBLIC ${TMXAPI_LIBRARIES} )
TARGET_LINK_LIBRARIES ( ${PROJECT_NAME} PUBLIC ${MYSQL_LIBRARIES} ${MYSQLCPPCONN_LIBRARIES} )
TARGET_LINK_LIBRARIES ( ${PROJECT_NAME} PUBLIC libasn_j2735 pthread m rt )

INSTALL (TARGETS ${PROJECT_NAME} EXPORT ${TMX_APPNAME}
         DESTINATION bin COMPONENT ${PROJECT_NAME})


