PROJECT ( tmxctl CXX )

SET (LIBRARY_NAME ${PROJECT_NAME}Static)

FILE (GLOB_RECURSE LIB_SOURCES "src/lib/*.c*")
FILE (GLOB_RECURSE HEADERS "src/lib/*.h*")
FILE (GLOB BIN_SOURCES "src/*.c*")

ADD_LIBRARY (${LIBRARY_NAME} STATIC ${LIB_SOURCES})
IF (TMX_LIB_DIR)
		SET_TARGET_PROPERTIES (${LIBRARY_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${TMX_LIB_DIR}")
ENDIF ()
TARGET_INCLUDE_DIRECTORIES (${LIBRARY_NAME} PUBLIC
                             $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src/lib>
                             /opt/carma/include)
TARGET_LINK_LIBRARIES (${LIBRARY_NAME} PUBLIC ${TMXUTILS_LIBRARIES})
       
SET (TMXCTL_LIBRARIES ${PROJECT_NAME}Static PARENT_SCOPE)
       
ADD_EXECUTABLE (${PROJECT_NAME} ${BIN_SOURCES})
IF (TMX_BIN_DIR)
    SET_TARGET_PROPERTIES (${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${TMX_BIN_DIR}")
ENDIF ()
TARGET_LINK_LIBRARIES (${PROJECT_NAME} PUBLIC ${LIBRARY_NAME})

       
INSTALL (TARGETS ${PROJECT_NAME} EXPORT ${TMX_APPNAME}
         DESTINATION bin COMPONENT ${PROJECT_NAME})
INSTALL (TARGETS ${LIBRARY_NAME} EXPORT ${TMX_APPNAME}
         DESTINATION lib COMPONENT ${PROJECT_NAME})
INSTALL (FILES ${HEADERS} 
         DESTINATION include COMPONENT ${PROJECT_NAME})

