PROJECT ( tmxtools CXX )

ADD_DEFINITIONS (-DDEFAULT_TREEREPAIR=${CMAKE_INSTALL_PREFIX}/share/xml/misc/treerepair.xml)

# Each tool is a new executable
FILE (GLOB CLI_TOOLS src/*)
FOREACH (TOOL ${CLI_TOOLS})
    IF (IS_DIRECTORY ${TOOL})
        GET_FILENAME_COMPONENT (TOOLNAME ${TOOL} NAME)
        FILE (GLOB_RECURSE TOOLSRC "${TOOL}/*.c*")
        
        ADD_EXECUTABLE (${TOOLNAME} ${TOOLSRC})
        IF (TMX_BIN_DIR)
            SET_TARGET_PROPERTIES (${TOOLNAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${TMX_BIN_DIR}")
        ENDIF ()
        TARGET_LINK_LIBRARIES (${TOOLNAME} PUBLIC ${TMXUTILS_LIBRARIES})

        INSTALL (TARGETS ${TOOLNAME} EXPORT ${TMX_APPNAME}
                 DESTINATION bin COMPONENT ${PROJECT_NAME})
    ENDIF()
ENDFOREACH ()

FILE (GLOB CLI_SCRIPTS scripts/*.sh)
INSTALL (PROGRAMS ${CLI_SCRIPTS} 
         DESTINATION bin COMPONENT ${PROJECT_NAME})

